--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <body>
     <div class="main-container">
       <%= render 'layouts/navigation' %>
+      <%= render 'layouts/menu' %>
       <div class="uk-container content-wrap">
         <%= render 'layouts/messages' %>
         <%= yield %>
