--- a/app/views/static_pages/_logged.html.erb
+++ b/app/views/static_pages/_logged.html.erb
@@ -1,35 +1,1 @@
-<h1>Welcome <%= current_user.email %></h1>
-
-<p><%= link_to "Add games", search_url, 'data-turbolinks' => 'false' %></p>
-
-<h2>Your collections: </h2>
-
-<ul>
-<% current_user.collections.each do |collection| %>
-  <li>
-  <%= collection.custom_name || collection.name %>
-  (<%= collection.default ? 'default' : 'custom' %>)
-  [<%= collection.needs_platform ? 'requires platform' : 'do not need platform' %>]
-  | <%= link_to 'Edit Name', edit_collection_url(collection) %>
-  | <%= link_to 'Delete', collection, method: :delete, data: { confirm: "You sure?"}  %>
-  </li>
-<% end %>
-</ul>
-
-<%= link_to 'Create new collection', new_collection_url %>
-
-<% current_user.collections.each do |collection| %>
-  <h3><%= collection.custom_name || collection.name %>:</h3>
-  <ul>
-  <% collection.games.each do |game| %>
-    <li><%= game.name %> | <%= game.platform_name || '[platform not defined]' %>
-    | <%= link_to "remove", remove_url(game_id: game.id, collection_id: collection.id), method: :delete, remote: true %>
-    </li>
-  <% end %>
-  </ul>
-<% end %>
-
-<p><%= link_to "Logout", logout_path, method: :delete %></p>
-
-
-
+<%= render partial: 'my_games_table', locals: { collection: @home_collection } %>
