--- a/app/views/static_pages/_logged_old.html.erb
+++ b/app/views/static_pages/_logged_old.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome <%= current_user.email %></h1>
 
-<p><%= link_to "Add games", search_path%></p>
+<p><%= link_to "Add games", search_url, 'data-turbolinks' => 'false' %></p>
 
 <h2>Your collections: </h2>
 
@@ -29,5 +29,7 @@
   </ul>
 <% end %>
 
-<p><%= link_to "Log out", logout_path, method: :delete %></p>
+<p><%= link_to "Logout", logout_path, method: :delete %></p>
+
+
 
