--- a/app/views/static_pages/_logged.html.erb
+++ b/app/views/static_pages/_logged.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: 'my_games_table', locals: { collection: @home_collection } %>
+<%= render partial: 'shared/my_games_table', locals: { collection: @home_collection } %>
