--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,12 +1,22 @@
+<% if logged_in? %>
 <div class="main-menu">
-    <a id="menu-button" href="" uk-icon="menu"></a>
 
+    <ul>
+    <li><%= link_to '', search_url, class: 'menu-button', 'data-turbolinks': 'false', 'uk-icon': 'search' %></li>
+    <li><%= link_to '', new_collection_url, class: 'menu-button', 'uk-icon': 'plus' %></li>
 
+    <% current_user.collections.each do |collection| %>
+    <li><%= link_to collection_initial(collection), collection, class: 'menu-button' %></li>
+    <% end %>
+
+    <li><%= link_to '', root_url, class: 'menu-button', 'uk-icon': 'settings' %></li>
+    <li><%= link_to '', logout_path, method: :delete, class: 'menu-button', 'uk-icon': 'sign-out' %></li>
+    </ul>
 
     <div id="menu-dropdown" class="uk-navbar-dropdown" uk-dropdown="mode: hover; toggle: #menu-button; pos: right-bottom">
         <ul class="uk-nav uk-navbar-dropdown-nav">
             <li>Logged in as:</li>
-            <li><%= current_user.email %></li>
+            <li>basldalsd</li>
             <li class="uk-nav-divider"></li>
             <li><%= link_to 'Home', root_url %></li>
             <li><%= link_to "Add Games", search_url, 'data-turbolinks' => 'false' %></li>
@@ -19,4 +29,6 @@
             <li><%= link_to 'Logout', logout_path, method: :delete %></li>
         </ul>
     </div>
+
 </div>
+<% end %>
